--- a/apiTarefaFinal/package.json
+++ b/apiTarefaFinal/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "express": "^4.21.1",
     "express.js": "^1.0.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.11.4",
     "node": "^22.11.0",
     "swagger": "^0.7.5",
     "swagger-jsdoc": "^6.2.8",
